    - update debian/patches/ubuntu-ua-string-changes.patch
    - update debian/patches/support-coinstallable-trunk-build.patch
    - update debian/build/rules.mk
    - update debian/config/mozconfig.in
  * Update unity-menubar.patch
  * Drop dont-override-general-useragent-locale.patch. The preference is
    gone, and the replacement pref is not hard-coded in the build

  [ Jeremy Bicha ]
  * Avoid direct dependency on libgtk2.0-0 which is required by Flash only
  * Drop obsolete Build-Depends on quilt, libgconf2-dev and libgnomeui-dev
  * Depend on libdbusmenu-gtk3-4 instead of the GTK+ 2 version

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Tue, 14 Nov 2017 09:12:42 +0100

firefox-trunk (58.0~a1~hg20171112r391436-0ubuntu1) bionic; urgency=medium

  [ Rico Tzschichholz ]
  * Bump build-dep on rustc >= 1.21.0 and cargo >= 0.22
  * Update patches
    - debian/patches/dont-checkout-locales.patch
    - debian/patches/ppc-no-static-sizes.patch
    - debian/patches/unity-menubar.patch
    - debian/patches/allow-lockPref-everywhere.patch
    - debian/patches/revert-upstream-search-engine-changes.patch
    - debian/patches/warn-only-on-duplicates.patch
  * Drop upstreamed/obsolete patches
    - debian/patches/build-ppc64-s390x-nss.patch
    - debian/patches/build-ppc64-s390x-rust.patch
  * Update make-langpack-xpis target
    - debian/build/rules.mk
  * Build language packs based on web extensions
    - debian/build/xpi-id.py
  * Bump debhelper compat level to 9
  * Drop 12.04/Precise specific changes
  * Update copyright and license files
  * Install watermark.svg from the onbording extension as symbolic icon
    - debian/build/rules.mk 
    - debian/firefox.dirs.in
  * mozbuild/shellutil.py: Don't treat '~' character as special
    - debian/patches/dont-treat-tilde-as-special.patch
  * Add Nepali language pack
    - update debian/config/locales.all
    - update debian/config/locales.shipped
    - update debian/control
  * Adapt to upstream and use ./mach